cluster/media/readarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
  labels:
    app: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeName: luma
      securityContext:
        fsGroup: 1000
      containers:
        - name: readarr
          image: ghcr.io/hotio/readarr@sha256:d2a6270c492fa0c3a631d96c7bcba1e0f01f200be6939879ff5000965068a162
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
          livenessProbe:
            httpGet:
              path: /
              port: 8787
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 8787
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://id.luma.chrismiller.xyz/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://id.luma.chrismiller.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
spec:
  tls:
    - hosts:
        - readarr.luma.chrismiller.xyz
      secretName: readarr-luma-tls
  rules:
    - host: readarr.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  number: 8787
